Building the arrow link component.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
   </head>
 
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sunt molestias itaque praesentium earum impedit laboriosam quae sit qui voluptatem!</p>
+    <a href="#" class="link-arrow">Learn more</a>
   </body>
 
 </html>
