--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   </head>
 
   <body>
-    <span class="badge badge--secondary">10% off</span>
+    <ul class="list list--tick">
+      <li class="list__item">item 1</li>
+      <li class="list__item">item 2</li>
+      <li class="list__item">item 3</li>
+    </ul>
   </body>
 
 </html>
