Build the button component.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
   </head>
 
   <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#wordpress"></use>
-      </svg>
-    </span>
+    <button class="btn btn--primary btn--block">Click me</button>
+    <a href="" class="btn btn--secondary btn--block btn--outline">Buy Now</a>
   </body>
 
 </html>
