--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
   </head>
 
   <body>
-    <button class="btn btn--primary btn--block">Click me</button>
-    <a href="" class="btn btn--secondary btn--block btn--outline">Buy Now</a>
+    <div class="input-group">
+      <span class="icon-container">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#wordpress"></use>
+        </svg>
+      </span>
+      <input type="text" class="input" placeholder="Enter domain name here...">
+      <!-- <button class="btn btn--accent">Search</button> -->
+    </div>
   </body>
 
 </html>
