Build the quote component.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Moshify - pratice</title>
   </head>
 
   <body>
-
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, veritatis! Quis dolor a expedita cupiditate officia quidem itaque delectus ipsum?
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image ">
+              <svg class="icon icon--primary quote__line">
+                <use xlink:href="images/sprite.svg#line"></use>
+              </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">Jonh Smith</h3>
+            <p class="quote__organisation">ABC Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 
 </html>
