--- a/index.html
+++ b/index.html
@@ -11,35 +11,14 @@
     <title>Moshify - pratice</title>
   </head>
 
-  <body style="padding:  5rem;">
-    <div class="card testimonial">
+  <body>
+    <div class="callout callout--primary">
       <div class="grid grid--1x2">
-        <div class="testimonial__image">
-          <img  src="images/testimonial.jpg" alt="A happy, smiling customer">
-          <span class="icon-container icon-container--accent">
-            <svg class="icon icon--white icon--small">
-              <use xlink:href="images/sprite.svg#quotes"></use>
-            </svg>
-          </span>
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit praesentium facilis veniam minus iure, explicabo rerum reprehenderit soluta quas molestiae?</p>
         </div>
-        <blockquote class="quote">
-          <p class="quote__text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, veritatis! Quis dolor a expedita cupiditate officia quidem itaque delectus ipsum?
-          </p>
-          <footer>
-            <div class="media">
-              <div class="media__image ">
-                  <svg class="icon icon--primary quote__line">
-                    <use xlink:href="images/sprite.svg#line"></use>
-                  </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title quote__author">Jonh Smith</h3>
-                <p class="quote__organisation">ABC Company</p>
-              </div>
-            </div>
-          </footer>
-        </blockquote>
+        <a href="" class="btn btn--secondary btn--stretched">Get Started</a>
       </div>
     </div>
   </body>
