Build the hero component.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!-- Navigation Start -->
-  <nav class="nav collapsible">
+  <!-- <nav class="nav collapsible">
     <a href="/" class="test__logo"><img src="./images/logo.svg" alt=""></a>
       <svg class="icon icon--white nav__toggler">
         <use xlink:href="images/sprite.svg#menu"></use>
@@ -25,9 +25,25 @@
         <li class="nav__item"><a href="#">Domain</a></li>
         <li class="nav__item"><a href="#">Pricing</a></li>
       </ul>
-  </nav>
+  </nav> -->
 
   <!-- Navigation End -->
+
+  <!-- Hero Start -->
+  <!-- <section class="block block--dark block--skewed-left hero">
+    <div class="container grid grid--1x2">
+      <header class="block__header hero__content">
+        <h1 class="block__heading">Cloud Hosting for Pros</h1>
+        <p class="hero__tagline">
+          Deploy your websites in less than 60 seconds.
+        </p>
+        <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+      </header>
+      <img class="hero__image" src="images/banner.png" alt="" />
+    </div>
+  </section> -->
+
+  <!-- Hero End -->
   <script src="./js/main.js"></script>
 </body>
 
