--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="./css/styles.css">
   <title>Moshify - pratice</title>
 </head>
-
 <body>
   <!-- Navigation Start -->
   <!-- <nav class="nav collapsible">
@@ -39,7 +38,17 @@
         </p>
         <a href="" class="btn btn--accent btn--stretched">Get Started</a>
       </header>
-      <img class="hero__image" src="images/banner.png" alt="" />
+      <picture>
+        <source
+          type="image/webp"
+          srcset="images/banner.webp 1x, images/banner_2x.webp 2x"
+        />
+        <source
+          type="image/png"
+          srcset="images/banner.png 1x, images/banner_2x.png 2x"
+        />
+        <img class="hero__image" src="images/banner.png" alt="" />
+      </picture>
     </div>
   </section> -->
 
